classic-ui: fix possible buffer overflows #5250
Add checks to functions using strcat. Now the legth of the resulting
string gets calculated and checked if it would exceed the max length
for this char array.

Thanks to DTAG Group Information Security for the findings.

refs: #5250
whatthecommit: fixed my stupidness ...

--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,12 @@ UPGRADE NOTES
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
 
+1.10.2 _ ??/??/????
+
+FIXES
+
+* classic ui: fix possible buffer overflows #5250 - RB
+
 1.10.1 - 04/11/2013
 
 ENHANCEMENTS
