classic-ui: fix vulnerability against CSRF attacks CVE-2013-7107 #5346
This is the fix for CVE-2013-7107. From now on the HTTP referer gets
checked if the request of cmd.cgi actually comes from cmd.cgi.
Otherwise the request will be rejected and the user be notified if
possible. Also a new cgi.cfg option "disable_cmd_cgi_csrf_protection"
got added to disable the protection and allow external programs to
submit commands.

refs: #5346

--- a/Changelog
+++ b/Changelog
@@ -20,6 +20,9 @@ ENHANCEMENTS
 
 * classic ui: add status.cgi modifed_attributes filter parameter #4880 - RB
 
+FIXES
+* classic ui: fix vulnerability against CSRF attacks CVE-2013-7107 #5346 - RB
+
 
 1.10.2 - 05/12/2013
 
